--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "vuepress": "^1.8.0"
     },
     "devDependencies": {
-        "@vuepress/plugin-blog": "^1.9.4"
+        "@vuepress/plugin-blog": "^1.9.4",
+        "@vuepress/plugin-google-analytics": "^2.0.0-beta.26"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
